--- a/main.css
+++ b/main.css
@@ -4,7 +4,9 @@
 }
 
 canvas {
+    display:block;
     border: 4px solid hsl(217, 78%, 58%);
     width: 100vw;
     object-fit: cover;
+    transform:scale(1.5);
 }
