--- a/main.css
+++ b/main.css
@@ -1,14 +1,14 @@
-:root {
-    margin: 0;
-    padding: 0;
+body {
+ padding: 0;
+ margin: 0;
 }
+
 
 canvas {
     display:block;
     box-sizing: border-box;
     border: 4px solid hsl(217, 78%, 58%);
-    width: 100vw;
-    
+    width: 100%;
     object-fit: cover;
    
 }
